syntax = "proto3";

option java_multiple_files = true;
option java_package = "nahguam.pulsar.rpc.grpc";

package nahguam;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
